--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @tailwindcss/cli -i ./src/css/input.css -o ./src/css/output.css --minify"
+    "build": "npx @tailwindcss/cli -i ./public/css/input.css -o ./public/css/output.css --minify"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.0.3",
